[package]
name = "kondis"
version = "0.1.0"
authors = ["salkin-mada <adam@oddodd.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
substring = "1.4.0"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["crossterm-backend"]

[patch.crates-io.enumset_derive]
git = "https://github.com/ocboogie/enumset"
branch = "span-fix"

